--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -7,7 +7,7 @@ spring:
     password: ''
   h2:
     console:
-      enabled: 'true'
+      enabled: true
       path: /h2-console
   jpa:
     properties:
@@ -15,7 +15,7 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
 
 jwt:
   subject: "bookstar"
